--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "buildCommand": "npx vite build",
+  "buildCommand": "vite build",
   "outputDirectory": "dist/public",
-  "installCommand": "npm install --include=dev",
+  "installCommand": "npm install",
+  "framework": null,
   "rewrites": [
     {
       "source": "/api/:path*",
